# robotour

./: CMakeLists.txt  README.md  package.xml
data/: buchlovice.gps  demo.gps  robotour.rviz  stromovka.gps
launch/: aerial_map.launch  fake_gps.launch  follower.launch  geometric_traversability.launch  goal_parser.launch  jetson_robotour.launch  local_utm.launch  planner.launch  point_cloud_color.launch  robotour.launch  robotour.rviz  rviz.launch  semantic_traversability.launch  status_summary.launch  transform_align.launch  utm_odom.launch
launch/cameras/: .omnicam_5.launch.swp  marv-basler-front.launch  marv-robot.launch  omnicam_5.launch  single_cam.launch  spot-3.launch
rviz/: robotour.rviz
scripts/: goal_parser  local_utm  rviz_goal_parser  status_summary  transform_align  utils.py  utm_odom
