<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
    <name>robotour</name>
    <version>0.0.1</version>
    <description>Robotour launchers and miscellaneous nodes</description>
    <url type="website">https://github.com/vras-robotour/robotour</url>

    <author email="tpetricek@gmail.com">Tomas Petricek</author>
    <author email="vlkjan6@fel.cvut.cz">Jan Vlk</author>
    <maintainer email="vlkjan6@fel.cvut.cz">Jan Vlk</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <depend>naex</depend>
    <depend>rospy</depend>
    <depend>osm2qr</depend>
    <depend>tf2_ros</depend>
    <depend>map_data</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>cloud_proc</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>image_segmentation</depend>

    <exec_depend condition="$ROS_DISTRO != noetic">python-utm-pip</exec_depend>
    <exec_depend condition="$ROS_DISTRO != noetic">python-numpy</exec_depend>
    <exec_depend condition="$ROS_DISTRO != noetic">python-scipy</exec_depend>

    <exec_depend condition="$ROS_DISTRO == noetic">python3-utm</exec_depend>
    <exec_depend condition="$ROS_DISTRO == noetic">python3-numpy</exec_depend>
    <exec_depend condition="$ROS_DISTRO == noetic">python3-scipy</exec_depend>
</package>
